Add test for “Girl Genius,” fix parsing